--- a/test/_extensions/quarto-journals/plos/partials/title.tex
+++ b/test/_extensions/quarto-journals/plos/partials/title.tex
@@ -6,10 +6,4 @@ $-- %%%% TODO %%%%%
 $-- Customize is needed, otherwise remove this partials to use Quarto default one
 $-- %%%%%%%%%%%%%%%%
 
-%%
-%% The "title" command has an optional parameter,
-%% allowing the author to define a "short title" to be used in page headers.
-$if(title)$
-\title$if(short-title)$[$short-title$]$endif${$title$}
-$endif$
-
+$-- PLOS does not add title outside of document body. We make this template empty
